<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textFree"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/free"
        android:id="@+id/freeOfferButton"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textPremium"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/premium"
        android:id="@+id/premiumOfferButton"
        android:layout_gravity="center"/>

</LinearLayout>