<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="360dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="20dp"
        android:columnCount="1"
        android:rowCount="8"
        android:layout_gravity="center">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/facebook"
            android:id="@+id/facebookButton"
            android:layout_row="0"
            android:layout_column="0"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/twitter"
            android:id="@+id/twitterButton"
            android:layout_row="1"
            android:layout_column="0"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailET"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordET"
            android:inputType="textPassword"
            android:layout_row="3"
            android:layout_column="0" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/login"
            android:id="@+id/loginAuthButton"
            android:layout_row="4"
            android:layout_column="0"
            />

        <TextView android:text="@string/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:id="@+id/forgotPasswordET"/>

    </GridLayout>

</LinearLayout>